--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     font-family: Arial,  sans-serif; /* keluarga font */
     font-size: 11px; /* Ukuran font utama pada tag <p></p> */
-    background-color: #f0f0f0; /* Warna latar belakang laman web */
-    color: white; /* Warna teks */
-    background-color: black; 
+    background-color: black; /* Warna latar belakang laman web */
+    color: yellow; /* Warna teks */
+    
 }
 h1 {
     color: #00a800; /* Warna tajuk (header)*/
