--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@ body {
     font-size: 11px; /* Ukuran font utama pada tag <p></p> */
     background-color: #f0f0f0; /* Warna latar belakang laman web */
     color: white; /* Warna teks */
-    background-color: black; 
+    background-color: black;
 }
 h1 {
-    color: #00a800; /* Warna tajuk (header)*/
+    color: blue; /* Warna tajuk (header)*/
     font-size: 24px; /* Ukuran font tajuk (header) */
     font-family: Georgia, serif; /* Keluarga font yang digunakan di tajuk (header) */
 }
 h2 {
-    color: aqua;
+    color: yellow;
     font-size: 25px;
+
 }
