--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background-color: #f0f0f0; /* Warna latar belakang laman web */
     color: white; /* Warna teks */
     background-color: black;
+    border: 0.5em solid;
+    padding: 0.5rem;
 }
 h1 {
     color: blue; /* Warna tajuk (header)*/
