--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+
+@keyframes color-change {
+    0% {
+      color: blue;
+    }
+  
+    50% {
+      color: red;
+    }
+  
+    100% {
+      color: blue;
+    }
+}
+
 body {
     font-family: Arial,  sans-serif; /* keluarga font */
     font-size: 11px; /* Ukuran font utama pada tag <p></p> */
@@ -8,10 +23,16 @@ body {
     
 
 }
+
 h1 {
-    color: blue; /* Warna tajuk (header)*/
+    color:blue;
     font-size: 24px; /* Ukuran font tajuk (header) */
     font-family: Georgia, serif; /* Keluarga font yang digunakan di tajuk (header) */
+}
+
+
+h1:hover {
+    animation: color-change 3s infinite;
 }
 h2 {
     color: yellow;
